fix: スキル期間を正規表現パターンで制約し未合致時は「経験あり」とするホワイトリスト判定へ修正